<resources>
    <string name="app_name">玩Android</string>
    <string name="error_tips">糟糕！加载失败了ヽ(≧Д≦)ノ\n 告诉大佬一些可能的原因：\n1.惨不忍睹的网络环境\n 2.服务器君的不定期抽风\n 3.OneAndroid现在心情不好拒绝服务喔~</string>
    <string name="retry">重新加载</string>
    <string name="prompt_password">请输入正确的密码</string>
    <string name="hint_admin">请输入正确的账号</string>
    <string name="action_reg_in">登录</string>
    <string name="have_acount">已有账号？</string>
    <string name="goto_login">马上登录</string>
    <string name="data_fail">数据加载失败</string>
    <string name="unknow_error">未知错误</string>
    <string name="login_fail">登录失败</string>
    <string name="regist_fail">注册失败</string>
    <string name="home_pager">首页</string>
    <string name="knowledge_hierarchy">体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="app_intro">A Reading WanAndroid App for you</string>
    <string name="home">WanAndroid</string>
    <string name="collect">收藏</string>
    <string name="setting">设置</string>
    <string name="logout">登出</string>
    <string name="about">关于</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use">常用</string>
    <string name="hotsearch">热搜</string>
    <string name="banner_fail">获取banner错误</string>
    <string name="shareView">shareView</string>
    <string name="useWebsite">常用网站</string>
    <string name="action_search">搜索</string>
    <string name="search_tint">搜索更多内容</string>
    <string name="hot_search">热门搜索</string>
    <string name="clear_all">清空记录</string>
    <string name="history_search">历史搜索</string>
    <string name="search_null_tint">大佬，快来搜索点干货吧</string>
    <string name="collect_success">收藏成功</string>
    <string name="uncollect_success">取消收藏成功</string>
    <string name="share">分享</string>
    <string name="open_it_with_browser">浏览器打开</string>
    <string name="addcollect">收藏</string>
    <string name="uncollect">取消收藏</string>
    <string name="wechat">公众号</string>
    <string name="todo">TODO</string>
    <string name="function">功能</string>
    <string name="option">选项</string>
    <string name="delete_success">删除成功</string>
    <string name="title_activity_todo">TodoActivity</string>
    <string name="not_done">待办清单</string>
    <string name="done">完成清单</string>
    <string name="only">一个</string>
    <string name="work">工作</string>
    <string name="study">学习</string>
    <string name="life">生活</string>
    <string name="addtodo">添加todo</string>
    <string name="update">修改Todo</string>
    <string name="addtodo_success">添加todo成功</string>
    <string name="update_success">修改Todo成功</string>
    <string name="todo_empty_msg">标题，内容，日期均不能为空</string>
    <string name="wechat_search">公众号搜索</string>
    <string name="logout_success">已经成功退出当前账号，请重新登录</string>

    <string name="about_content"><![CDATA[
        <h3>软件内容:</h3>
        <p>\t\t本软件是一款本人抽空写的安卓练手项目，后台数据由鸿洋大神的玩andoird提供，其实网上已经有很多版本优秀的的Wanandroid 安卓项目了，但是觉得自己不亲自实践就永远不会遇到
        开发中的问题。在这过程中，也会思考一些自己的东西。功能基本已经完成，可能还不够细致，后期有空再更新。
        </p>

        <h3>源码位置:</h3>
        <p>\t\t项目地址：<a href="https://github.com/Kanghanbin/wanAndroid" target="_blank">https://github.com/Kanghanbin/wanAndroid</a>本软件开源，如果你发现任何错误，欢迎勾搭，我会虚心学习，感谢各位大佬们支持</p>
    ]]></string>
    <string name="clear_cache">清理缓存</string>
    <string name="setting_night">夜间模式</string>
    <string name="cast_night_mode_failed">切换夜间模式失败</string>
    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="share_type_url">%1$s 分享\n标题：%2$s\n 链接：%3$s</string>
    <string name="write_permission_not_allowed">读写权限不允许</string>
    <string name="theme_skin">主题换肤</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
</resources>
