<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/function">
        <menu>
            <item
                android:id="@+id/item_home"
                android:checked="true"
                android:icon="@mipmap/icon_nav_home"
                android:title="@string/home" />
            <item
                android:id="@+id/item_wechat"
                android:icon="@mipmap/icon_nav_wechat"
                android:title="@string/wechat" />
            <item
                android:id="@+id/item_Todo"
                android:icon="@mipmap/icon_nav_todo"
                android:title="@string/todo" />
            <item
                android:id="@+id/item_collect"
                android:icon="@mipmap/icon_nav_collect"
                android:title="@string/collect" />
        </menu>

    </item>
    <item android:title="@string/option">
        <menu>
            <item
                android:id="@+id/item_setting"
                android:icon="@mipmap/icon_nav_setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/item_about"
                android:icon="@mipmap/icon_nav_about"
                android:title="@string/about" />
            <item
                android:id="@+id/item_logout"
                android:icon="@mipmap/icon_nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>