<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_main_pager"
        android:enabled="true"
        android:icon="@mipmap/icon_home_noselected"
        android:title="@string/home_pager"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_knowledge_hierarchy"
        android:enabled="true"
        android:icon="@mipmap/icon_hierarchy_noselected"
        android:title="@string/knowledge_hierarchy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_navigation"
        android:enabled="true"
        android:icon="@mipmap/icon_navagation_noselected"
        android:title="@string/navigation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_project"
        android:enabled="true"
        android:icon="@mipmap/icon_project_noselected"
        android:title="@string/project"
        app:showAsAction="ifRoom" />
</menu>