<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_collect"
        android:icon="@drawable/selector_like"
        android:orderInCategory="100"
        android:title="@string/collect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_share"
        android:icon="@mipmap/icon_menu_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/item__browser"
        android:icon="@mipmap/icon_menu_broswer"
        android:orderInCategory="100"
        android:title="@string/open_it_with_browser"
        app:showAsAction="never" />
</menu>
