<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kanghanbin.wanandroid.ui.activity.HotKeySearchActivity">

    <include layout="@layout/search_toolbar"></include>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/rv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_search"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_16"
                android:layout_marginBottom="@dimen/dp_8" />

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/top_search_flow_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:max_select="0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24">

                <TextView
                    android:id="@+id/search_history_clear_all_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_all"
                    android:textColor="@color/gray"
                    android:drawableStart="@mipmap/icon_clear"
                    android:drawablePadding="@dimen/dp_6"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_search"
                    android:textColor="@color/salmon"
                    android:textSize="@dimen/sp_16"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/search_history_clear_all_tv" />
            </RelativeLayout>

            <TextView
                android:id="@+id/search_history_null_tint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_null_tint"
                android:textColor="@color/gray"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_history_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>