<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical"
    tools:context=".ui.fragment.HomeFragment">

    <include layout="@layout/view_toolbar"></include>


    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smart_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlHeaderHeight="@dimen/dp_100"
        app:srlPrimaryColor="@color/colorPrimary">

        <com.scwang.smartrefresh.header.DeliveryHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.scwang.smartrefresh.header.DeliveryHeader>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_notdone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_notdone"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/not_done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"></View>

                <RadioButton
                    android:id="@+id/rb_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_done"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    />


            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/dp_10">

                <RadioButton
                    android:id="@+id/rb_only"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/selector_todo_type"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/only"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

                <RadioButton
                    android:id="@+id/rb_work"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/selector_todo_type"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/work"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

                <RadioButton
                    android:id="@+id/rb_study"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/selector_todo_type"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/study"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

                <RadioButton
                    android:id="@+id/rb_life"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/selector_todo_type"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/life"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

            </RadioGroup>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightgray"
                android:paddingBottom="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"></android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <com.scwang.smartrefresh.layout.footer.BallPulseFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAnimatingColor="@color/colorPrimary"
            app:srlNormalColor="@color/colorPrimary"></com.scwang.smartrefresh.layout.footer.BallPulseFooter>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <!--<android.support.v4.view.ViewPager-->
    <!--android:id="@+id/rv_main"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"></android.support.v4.view.ViewPager>-->
</LinearLayout>