<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kanghanbin.wanandroid.comm.kanghanbin1.wanandroid.ui.activity.UseActivity">

    <include layout="@layout/view_toolbar"></include>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/rv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="标题"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="请输入标题"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="内容"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="请输入内容"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="日期"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="请选择日期"

                android:textColor="@color/gray"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="类型"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal"
                android:padding="@dimen/dp_10">

                <RadioButton
                    android:id="@+id/rb_only"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/selector_todo_type"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/only"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

                <RadioButton
                    android:id="@+id/rb_work"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/selector_todo_type"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/work"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

                <RadioButton
                    android:id="@+id/rb_study"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/selector_todo_type"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/study"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

                <RadioButton
                    android:id="@+id/rb_life"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/selector_todo_type"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/life"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="状态"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <RadioGroup
                android:id="@+id/rg_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_notdone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_notdone"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/not_done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"></View>

                <RadioButton
                    android:id="@+id/rb_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_done"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />

            </RadioGroup>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@drawable/shape_blue_grient_btn"
        android:text="@string/addtodo"
        android:textColor="@color/white"
        android:textStyle="normal" />

</LinearLayout>