<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/setting_other_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        app:cardCornerRadius="@dimen/dp_3"
        app:cardElevation="@dimen/dp_2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/setting_auto_cache_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">

                <com.bilibili.magicasakura.widgets.TintImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_autocache"
                    app:imageTint="@color/theme_color_primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_weight="1"
                    android:text="@string/setting_cache"
                    android:textColor="@color/black" />

                <com.bilibili.magicasakura.widgets.TintCheckBox
                    android:id="@+id/cb_setting_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/abc_btn_check_material"
                    android:checked="true"
                    app:compoundButtonTint="@color/theme_color_primary"
                    tools:ignore="PrivateResource" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/lightgray"></View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">

                <com.bilibili.magicasakura.widgets.TintImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_no_img"
                    app:imageTint="@color/theme_color_primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_weight="1"
                    android:text="@string/setting_image"
                    android:textColor="@color/black" />

                <com.bilibili.magicasakura.widgets.TintCheckBox
                    android:id="@+id/cb_setting_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/abc_btn_check_material"
                    app:compoundButtonTint="@color/theme_color_primary"
                    tools:ignore="PrivateResource" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/lightgray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">

                <com.bilibili.magicasakura.widgets.TintImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_night"
                    app:imageTint="@color/theme_color_primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_weight="1"
                    android:text="@string/setting_night"
                    android:textColor="@color/black" />

                <com.bilibili.magicasakura.widgets.TintCheckBox
                    android:id="@+id/cb_setting_night"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/abc_btn_check_material"
                    app:compoundButtonTint="@color/theme_color_primary"
                    tools:ignore="PrivateResource" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/lightgray"></View>

            <LinearLayout
                android:id="@+id/ll_skin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">

                <com.bilibili.magicasakura.widgets.TintImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_skin"
                    app:imageTint="@color/theme_color_primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_weight="1"
                    android:text="@string/theme_skin"
                    android:textColor="@color/black" />

                <com.bilibili.magicasakura.widgets.TintTextView
                    android:id="@+id/tv_skin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/theme_color_primary" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/lightgray"></View>

            <LinearLayout
                android:id="@+id/ll_setting_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">

                <com.bilibili.magicasakura.widgets.TintImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_cache"
                    app:imageTint="@color/theme_color_primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_weight="1"
                    android:text="@string/clear_cache"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_setting_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>